# uni_projects

assignment_one/Question_four/: CMakeLists.txt  highlightfile.cpp  highlightfile.h  main.cpp
assignment_one/Question_one/: CMakeLists.txt  software.cpp  software.h  softwaredate.cpp  softwaredate.h
assignment_one/Question_three/: CMakeLists.txt  main.cpp  musicdelegate.cpp  musicdelegate.h  musicmodelview.cpp  musicmodelview.h
assignment_one/Question_two/: CMakeLists.txt  main.cpp  software.cpp  software.h  softwaredate.cpp  softwaredate.h
assignment_two/Project_three/: CMakeLists.txt  registrationlist.h  registrationlistreader.cpp  registrationlistwriter.h  studentregistration.cpp  studentregistration.h  widget.cpp  widget.h  xmlhandler.h
assignment_two/Question_four/: CMakeLists.txt  guestregistration.cpp  guestregistration.h  registrationfactory.cpp  registrationfactory.h  registrationlist.h  registrationlistreader.h  registrationlistwriter.h  studentregistration.h  widget.cpp  widget.h  xmlhandler.cpp  xmlhandler.h
assignment_two/Question_one/: CMakeLists.txt  guestregistration.cpp  guestregistration.h  person.h  registration.cpp  registration.h  registrationlist.cpp  registrationlist.h  studentregistration.cpp  studentregistration.h  widget.cpp  widget.h
assignment_two/Question_two/: CMakeLists.txt  guestregistration.h  person.cpp  registration.cpp  registration.h  registrationlist.cpp  registrationlistwriter.cpp  widget.cpp  widget.h
